# CarCarImproveWireless

./: .gitignore  README.md  test_hm10_comm.py
bt_comm/: README.md  chat_hm10.py  environment.yml  pyproject.toml
bt_comm/bt_comm/: __init__.py  __main__.py  bleak_interface.py  chat.py  esp32_interface.py
chat_hm10/: chat_hm10-bleak.py  chat_hm10-esp32.py
chat_hm10/hm10_bleak/: README.md  hm10_bleak_client.py
chat_hm10/hm10_esp32/: __init__.py  hm10_esp32_bridge.py
esp32-hm10/: CMakeLists.txt  DOCUMENTATION.md  IMPLEMENTATION_NOTES.md  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32-hm10/components/ble_bridge/: CMakeLists.txt  Kconfig  README.md
esp32-hm10/components/ble_bridge/include/: ble_bridge.h
esp32-hm10/components/ble_bridge/src/: ble_bridge.c  ble_bridge_internal.h  ble_gattc.c  bleak.c  transceiver.c
esp32-hm10/main/: CMakeLists.txt  main.c
init_hm10/: init_hm10.ino
python_module/: IMPLEMENTATION_NOTES.md  requirements.txt  setup.py
python_module/bt_bridge/: __init__.py  bleak_client.py  common.py  transceiver.py
reset_hc05/: reset_hc05.ino
reset_hc06/: reset_hc06.ino
reset_hm10/: reset_hm10.ino
